# jetson_person_vla_mvp

HarnessEngineeringLab/jetson_person_vla_mvp/: CMakeLists.txt  README.md  todo.md
HarnessEngineeringLab/jetson_person_vla_mvp/config/: person_vla.yaml
HarnessEngineeringLab/jetson_person_vla_mvp/docs/: 01-learning-guide-ko.md  02-jetson-setup-ko.md  03-harness-engineering-examples-ko.md  04-safety-and-privacy-ko.md  05-development-roadmap-ko.md
HarnessEngineeringLab/jetson_person_vla_mvp/include/person_vla/: ActionPolicy.hpp  AppConfig.hpp  SceneNarrator.hpp  Types.hpp
HarnessEngineeringLab/jetson_person_vla_mvp/models/: README.md
HarnessEngineeringLab/jetson_person_vla_mvp/plans/: mvp-plan.md
HarnessEngineeringLab/jetson_person_vla_mvp/scripts/: run_jetson_csi.sh
HarnessEngineeringLab/jetson_person_vla_mvp/src/: ActionPolicy.cpp  AppConfig.cpp  IdentityStore.cpp  PersonDetector.cpp  SceneNarrator.cpp  Tracker.cpp  main.cpp
HarnessEngineeringLab/jetson_person_vla_mvp/tests/: identity_store_test.cpp
docs/: 03-harness-engineering-examples-ko.md  05-development-roadmap-ko.md
include/person_vla/: Tracker.hpp
jetson_person_vla_mvp/: .gitignore  README.md  todo.md
jetson_person_vla_mvp/config/: person_vla.yaml
jetson_person_vla_mvp/docs/: 01-learning-guide-ko.md  02-jetson-setup-ko.md  04-safety-and-privacy-ko.md
jetson_person_vla_mvp/scripts/: run_usb_camera.sh
jetson_person_vla_mvp/src/: IdentityStore.cpp  PersonDetector.cpp  Tracker.cpp  main.cpp
models/: README.md
plans/: mvp-plan.md
src/: AppConfig.cpp
(+2 files in other folders)
